src/app/components/home/_index.scss
/*
 *  PAGE: HOME
 *  Well it's the homepage isn't it
 *
 *  Notes: The homepage is in need of a big refactor due to things getting chopped and changed as
 *         well as the lack of integration with the CMS. We can't make use of optmised images so a
 *         temporary solution has been implemented where jpgs or pngs are served up according to
 *         screen width in this css rather than having inline <img>
 *         Jpgs for smaller screns to save on download cost. But they need flat backgrounds (or
 *         hide the scrollmagic). See near the bottom where each block now has background-color !important
 *         to override scrollmagic on screens that use the jpg instead of png.
 * TODO: The homepage needs to think about what it's done and sort itself out. BIG REFACTOR NEEDED!
 */

@mixin vertically-centering-parent($height: 100%) {
  display: table;
  height: $height;
}

@mixin vertically-centred-element {
  display: table-cell;
  vertical-align: middle;
}

.page-home {
  transform: translateZ(0); /* hardware accelerate background-color change on scroll */

  .screen-block:not(.hero) {

    .wrapper {
      display: flex;
      flex-direction: column;
      justify-content: center;
      overflow: visible;


      @media screen and (min-width: $bp-large) {
        display: block;
      }
    }

    h2 {
      margin-bottom: 10px;

      @media screen and (min-width: $bp-large) {
        margin-bottom: 20px;
      }
    }

    .text-block {
      margin: 0 6.25%;
    }

    @media screen and (min-width: $bp-medium) {
      .text-block {
        margin: 0 12.5%;
      }
    }

    @media screen and (min-width: $bp-large) {
      .wrapper {
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
        height: 100vh;
        padding: 0 4%;
      }

      .block-parent {
        flex: 5;
      }

      .text-block {
        flex: 3;
        margin: 0 30px;
      }

    }

    @media screen and (min-width: $bp-larger) {
      .wrapper {
        padding: 0 6%;
      }

      .text-block {
        margin: 0 50px;
      }
    }

    &.client {
      .block-parent {
        .block-child {
          .image-container {
            position: relative;

            .harvey-nicks-device {
              width: 100%;
              position: relative;
              background-image: url("/images/home/Homepage_Harvey_Phone_Mobile.jpg");
              background-repeat: no-repeat;
              background-position: 50% 50%;
              background-size: auto 280px;
              height: 290px;

              @media screen and (min-width: $bp-small) {
                height: 400px;
                background-size: auto 400px;
              }

              @media screen and (min-width: $bp-medium) {
                height: 500px;
                background-size: auto 500px;
              }

              @media screen and (min-width: $bp-large) {
                background-image: url("/images/home/Homepage_Harvey_Phone.png");
              }

            }

            [class^="harvey-nicks-shape-"] {
              position: absolute;
              width: 15%;
              height: 18%;
              fill: $white;
            }

            .harvey-nicks-shape-3 {
              top: 58%;
              left: 10%;
            }

            .harvey-nicks-shape-4 {
              top: 20%;
              right: 23%;
            }

            .harvey-nicks-shape-1 {
              top: 0;
              left: 10%;
            }

            .harvey-nicks-shape-2 {
              top: 63%;
              right: 6%;
            }
          }
        }
      }
    }

    &.own-stuff {

      .block-parent {
        transform: translateX(20px);

        .block-child {
          padding: 0 15px;

          @media screen and (min-width: $bp-small) {
            padding: 0;
          }

          .image-container {
            position: relative;
            text-align: center;

            .monument-device {
              width: 100%;
              position: relative;
              background-image: url("/images/home/Homepage_Games_Ipad_Mobile.jpg");
              background-repeat: no-repeat;
              background-position: 50% 50%;
              background-size: auto 265px;
              height: 300px;

              @media screen and (min-width: $bp-small) {
                height: 400px;
                background-size: auto 400px;
              }

              @media screen and (min-width: $bp-medium) {
                height: 500px;
                background-size: auto 500px;
              }

              @media screen and (min-width: $bp-large) {
                background-image: url("/images/home/Homepage_Games_Ipad.png");
              }

            }

            [class^="monument-award-"] {
              position: absolute;
              width: 25%;
              height: 15%;
              fill: $white;
            }

            .monument-award-1 {
              top: 0%;
              left: 19%;
            }
            .monument-award-2 {
              top: 15%;
              left: 8%;
            }
            .monument-award-3 {
              top: 30%;
              left: -3%;
            }

          }
        }
      }

      @media screen and (min-width: $bp-medium) {
        .block-parent {
          transform: translateX(50px);
        }
      }

      @media screen and (min-width: $bp-large) {
        padding-right: 0;

        .block-parent {
          order: 2;
          transform: translateX(70px);
        }
      }
    }

    &.ventures {
      .block-parent {
        .block-child {
          .image-container {
            position: relative;

            .dice-device {
              width: 100%;
              position: relative;
              background-image: url("/images/home/Homepage_Dice_Mobile.jpg");
              background-repeat: no-repeat;
              background-position: 50% 50%;
              background-size: auto 380px;
              height: 380px;

              @media screen and (min-width: $bp-small) {
                height: 500px;
                background-size: auto 500px;
              }

              @media screen and (min-width: $bp-medium) {
                height: 600px;
                background-size: auto 600px;
              }

              @media screen and (min-width: $bp-large) {
                position: relative;
                background-image: url("/images/home/Homepage_Dice_Mask.png");
              }

            }

            @media screen and (min-width: $bp-large) {
              .dice-screen-anim {
                position: absolute;
                width: 173px;
                height: 305px;
                left: 50%;
                margin-left: 7px;
                top: 137px;
                background-image: url("/images/home/Homepage_Dice_Motion.gif");
                background-size: 100% auto;
              }
            }


            .dice-logo {
              position: absolute;
              top: -2%;
              left: 64%;
              width: 24%;
              height: 24%;
              fill: $white;
            }
          }
        }
      }
    }
  }

  .screen-block.welcome {
    .headline-image {
      position: absolute;
      margin: auto;
      left: 0;
      right: 0;
      top: 0;
      bottom: 0;
      width: 100%;
      transition: opacity 0.8s ease-in-out;
      backface-visibility: hidden;
      opacity: 1;
      display: block;
      max-width: 520px;
      background-image: url("/images/home/watches_small.jpg");
      background-repeat: no-repeat;
      background-position: 50% 50%;
      background-size: 460px auto;

      @media screen and (min-width: $bp-medium) {
        max-width: 660px;
        background-size: 580px auto;
      }

      @media screen and (min-width: $bp-large) {
        background-image: url("/images/home/watches.png");
        background-size: 770px auto;
      }

      &.add {
        opacity: 0;
      }
      &.show {
        opacity: 1;
      }
      &.hide {
        opacity: 0;
      }
    }
  }

  @media screen and (max-width: $bp-large) {
    .welcome {
      background-color: #6114CC !important;
    }
    .client {
      background-color: #6986ec !important; /* this is the wrong blue but it goes with the jpg provided */
    }
    .own-stuff {
      background-color: #FFBF02 !important;
    }
    .ventures {
      background-color: #f55c57 !important; /* this too is actually slightly different to the correct red */
    }
  }
}


.js .page-home {
  .welcome {
    .image-entrance.show {
      transition: opacity 0.8s ease-in-out;
      transition-delay: 1.2s;
    }
  }
}

